namespaces/observability/prometheus-operator/vs-grafana.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
spec:
  hosts:
    - 'grafana.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: prometheus-operator-grafana.observability.svc.cluster.local
